trying to fix relayout issue

--- a/data/ext/editorHTML/extension.css
+++ b/data/ext/editorHTML/extension.css
@@ -1,7 +1,7 @@
 .note-editor {
-    border-width: 0px !important; 
+    border-width: 0 !important;
     width: 100%; 
-    height: 100%; 
+    height: 99% !important;
 }
 
 .note-codable {
@@ -13,4 +13,10 @@
     height: 95% !important;
     overflow: auto;    
     font-size: 140%;
+}
+
+#viewer {
+    background-color: white;
+    width: 100%;
+    height: 90% !important;
 }
